<resources>
    <string name="app_name">AndroidStudyDemo</string>
    <string name="skip">跳转</string>
    <string name="first_activity">First Activity!</string>
    <string name="name">姓名</string>
    <string name="name_value">小明</string>
    <string name="img">电话</string>
    <string name="longtext">测试长文字</string>
    <string name="imagecdes">照片</string>
    <string name="barrier_text">在栅栏的右边在栅栏的右边</string>
    <string name="rb_1">RadioButton1</string>
    <string name="rb_2">RadioButton2</string>
    <string name="rb_3">RadioButton3</string>
    <string name="tvchain1">tvchain1</string>
    <string name="tvchain2">tvchain222222</string>
    <string name="tvchain3">tvchain3</string>
    <string name="leak_first_text">第一页</string>
    <string name="leak_second_text">第二页</string>
    <string name="btn_leak_jump">跳转</string>
    <string name="item_rv_demo_name">TextView</string>
    <string name="handler_msg">TextView</string>

    <string name="btn_method1">新建Handler子类</string>
    <string name="btn_method2">匿名Handler子类</string>
    <string name="btn_method3">Handler.post()</string>
    <string name="detail_back">返回</string>
    <string name="handler_desc">
        使用Handler的原因：将工作线程需操作UI的消息 传递 到主线程，使得主线程可根据工作线程的需求 更新UI，
        从而避免线程操作不安全的问题。\n\n
    Handler使用方式共分为2种：使用Handler.sendMessage（）、使用Handler.post（）\n\n
    在该使用方式中，又分为2种：新建Handler子类（内部类）、匿名 Handler子类
    </string>

    <string name="btn_method4">子线程创建Handler</string>
    <string name="method04text">
        在子线程中 ，创建Handler类对象（错误写法）: \n
        1.Looper.prepare();\n
        2.Handler mHandler = new Handler();  (自动关联当前线程的Looper对象,
        Handler源码:  mLooper = Looper.myLooper();)\n
        3.mHandler.sendMessage(msg);\n
        4.Looper.loop();\n
        但是这只是子线程的handler,不能进行UI操作\n\n
        在子线程中 ，创建Handler类对象（正确写法）: \n
        1.Handler mHandler = new Handler(Looper.getMainLooper());\n
        2.mHandler.sendMessage(msg);\n\n
        总结：\n
        一、主线程的Looper对象自动生成，不需手动生成；而子线程的Looper对象则需手动通过Looper.prepare()创建\n
        二、在子线程若不手动创建Looper对象 则无法生成Handler对象\n
        三、根据Handler的作用（在主线程更新UI），故Handler实例的创建场景 主要在主线程
    </string>

    <string name="handlerresult">测试结果</string>
    <string name="btn_handlerthread_01">点击延迟1s + 显示我爱学习</string>
    <string name="btn_handlerthread_02">点击延迟3s + 显示我不爱学习</string>
    <string name="btn_handlerthread_03">结束线程的消息循环</string>
    <string name="btn_handlerthread">HandlerThread</string>
    <string name="tv_handlerthread">
        主线程要向子线程发送消息，主线程持有子线程的workHandler，利用workHandler发送消息；\n
        子线程要向主线程发送消息，子线程持有主线程的mainHandler，利用mainHandler发送消息；\n

        HandlerThread的本质：继承Thread类 , 封装Handler类。\n
        Thread run()方法内部已经有Looper.prepare()和Looper.loop()，我们不用复写
    </string>
    <string name="compress_image">压缩照片</string>
    <string name="model_clicked_pattern">You clicked on the rank %1$d word: %2$s!</string>
    <string name="test_longtext">实验室小鼠是专门为测试目的而饲养的，它们往往是第一批感受到药物效果的动物,从阿尔茨海默病到背痛等所有治疗疾病的药物，以及所有的治疗方法。 考虑到这一点，研究人员想尽可能多地了解小鼠的大脑是有道理的，一个为期三年的项目刚刚完成了有史以来最完整的小鼠大脑“图谱”。</string>

    <string name="authority">com.aotuman.studydemo.threadsample</string>
    <string name="activity_title">Picasa Images</string>
    <string name="title_activity_life_cycles_main">LifeCyclesMainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="content_tip">我是内容</string>
    <string name="custom_tip">我是自定义内容</string>

    <string name="toast_refresh">刷新</string>
    <string name="toast_sign_in">登录</string>

    <string name="ellipsis">\u2026</string>

    <string
        name="child_1_text"
        description="Placeholder text for the first element in the layout"
        >Hello.  I am Yoga!</string>
    <string
        name="child_2_text"
        description="Placeholder text for the second element in the layout"
        >I am a layout engine!</string>
    <string
        name="child_3_text"
        description="Placeholder text for the third element in the layout"
        >I run natively.</string>
    <string
        name="child_4_text"
        description="Placeholder text for the fourth element in the layout"
        >So I\'m fast.</string>
    <string
        name="child_5_text"
        description="Placeholder text for the fifth element in the layout"
        >Who are you?</string>

    <string name="dagger2_a">最简单的使用@Inject</string>
    <string name="dagger2_b">使用@Module</string>
    <string name="dagger2_c">通过Module传参(1)</string>
    <string name="dagger2_d">使用@Component.Builder(2)</string>
</resources>
