<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/handler_nav"
    app:startDestination="@id/handlerMainFragment">

    <fragment
        android:id="@+id/handlerMainFragment"
        android:name="com.aotuman.studydemo.handler.HandlerMainFragment"
        android:label="handler_demo"
        tools:layout="@layout/fragment_handler_main">
        <action
            android:id="@+id/action_handlerMainFragment_to_handlerMethod01Fragment"
            app:destination="@id/handlerMethod01Fragment" />
        <action
            android:id="@+id/action_handlerMainFragment_to_handlerMethod02Fragment2"
            app:destination="@id/handlerMethod02Fragment" />
        <action
            android:id="@+id/action_handlerMainFragment_to_handlerMethod03Fragment"
            app:destination="@id/handlerMethod03Fragment" />
    </fragment>
    <fragment
        android:id="@+id/handlerMethod01Fragment"
        android:name="com.aotuman.studydemo.handler.HandlerMethod01Fragment"
        android:label="@string/btn_method1"
        tools:layout="@layout/fragment_handler_method01">
        <action
            android:id="@+id/action_handlerMethod01Fragment_to_handlerMainFragment"
            app:destination="@id/handlerMainFragment" />
    </fragment>
    <fragment
        android:id="@+id/handlerMethod02Fragment"
        android:name="com.aotuman.studydemo.handler.HandlerMethod02Fragment"
        android:label="@string/btn_method2">
        <action
            android:id="@+id/action_handlerMethod02Fragment2_to_handlerMainFragment"
            app:destination="@id/handlerMainFragment" />
    </fragment>
    <fragment
        android:id="@+id/handlerMethod03Fragment"
        android:name="com.aotuman.studydemo.handler.HandlerMethod03Fragment"
        android:label="@string/btn_method3">
        <action
            android:id="@+id/action_handlerMethod03Fragment_to_handlerMainFragment"
            app:destination="@id/handlerMainFragment" />
    </fragment>
</navigation>